crates/formatter/tests/snapshots/snapshots__coder__migrations__000512_boundary_session_owner.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table boundary_sessions
	drop constraint if exists boundary_sessions_owner_id_fkey;
alter table boundary_sessions drop column if exists owner_id;
