crates/formatter/tests/snapshots/snapshots__coder__migrations__000514_ai_gateway_keys.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Enum additions to resource_type and api_key_scope are intentionally not
-- reverted because Postgres cannot drop enum values safely.
drop index if exists ai_gateway_keys_hashed_secret_idx;
drop index if exists ai_gateway_keys_secret_prefix_idx;
drop index if exists ai_gateway_keys_name_idx;
drop table if exists ai_gateway_keys;
