crates/formatter/tests/snapshots/snapshots__coder__migrations__000514_ai_gateway_keys.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table ai_gateway_keys (
	id uuid primary key,
	created_at timestamptz not null,
	name text not null,
	secret_prefix varchar(11) not null,
	hashed_secret bytea not null,
	last_used_at timestamptz null,
	constraint ai_gateway_keys_name_check
		check (length(name) <= 64 and name ~ '^[a-z0-9]+(-[a-z0-9]+)*$'),
	constraint ai_gateway_keys_secret_prefix_check
		check (length(secret_prefix) = 11),
	constraint ai_gateway_keys_hashed_secret_check
		check (length(hashed_secret) > 0)
);

comment on table ai_gateway_keys is 'Hashed bearer secrets used by AI Gateway standalone replicas to authenticate into coderd.';
comment on column ai_gateway_keys.secret_prefix is 'Public token prefix for display and audit correlation. Auth uses hashed_secret.';

create unique index ai_gateway_keys_name_idx
	on ai_gateway_keys
	using btree(lower(name));
create unique index ai_gateway_keys_secret_prefix_idx
	on ai_gateway_keys
	using btree(secret_prefix);
create unique index ai_gateway_keys_hashed_secret_idx
	on ai_gateway_keys
	using btree(hashed_secret);

alter type resource_type add value if not exists 'ai_gateway_key';

alter type api_key_scope add value if not exists 'ai_gateway_key:*';
alter type api_key_scope add value if not exists 'ai_gateway_key:create';
alter type api_key_scope add value if not exists 'ai_gateway_key:delete';
alter type api_key_scope add value if not exists 'ai_gateway_key:read';
