crates/formatter/tests/snapshots/snapshots__coder__migrations__000516_org_default_member_roles.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table organizations drop column if exists default_org_member_roles;
