crates/formatter/tests/snapshots/snapshots__coder__migrations__000517_audit_user_ai_budget_override_resource_type.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Audit log resource type for user AI budget overrides.
alter type resource_type add value if not exists 'user_ai_budget_override';
