crates/formatter/tests/snapshots/snapshots__coder__migrations__000523_chat_context_hydration.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Chat-side pin of the agent's latest pushed context snapshot
-- (workspace_agent_context_snapshots). Written by hydration (chat
-- create and agent push) and the dirty fan-out, and re-pinned by the
-- refresh endpoint. These columns are dark plumbing: they do not feed
-- prompt building and the per-turn context pull is unchanged. They are
-- read by drift detection and the refresh endpoint only.
alter table chats
	add column context_aggregate_hash bytea,
	add column context_dirty_since timestamptz,
	add column context_dirty_resources jsonb,
	add column context_error text not null default '';

comment on column chats.context_aggregate_hash is 'Aggregate hash of the agent context snapshot this chat is pinned to. NULL until first hydrated; compared against the agent''s latest snapshot hash to detect drift.';
comment on column chats.context_dirty_since is 'Set when an agent push changes the pinned hash; cleared on refresh. NULL means clean.';
comment on column chats.context_dirty_resources is 'Deterministic prefix of resources that changed since the pinned hash. Reserved for the dirty diff; left NULL until the UI phase populates it.';
comment on column chats.context_error is 'Snapshot-level error copied from the pinned snapshot (count cap exceeded, watcher degraded, etc.). Empty when healthy.';

-- Refresh chats_expanded to include the new chat columns. The gentest
-- TestViewSubsetChat requires every chats column to appear in the view.
-- Drop and recreate because a view cannot have columns inserted in the
-- middle of its column list.
drop view if exists chats_expanded;
create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.last_injected_context,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	c.snapshot_version,
	c.history_version,
	c.queue_version,
	c.generation_attempt,
	c.retry_state,
	c.retry_state_version,
	c.runner_id,
	c.requires_action_deadline_at,
	coalesce(root.user_acl, c.user_acl) as user_acl,
	coalesce(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name,
	c.context_aggregate_hash,
	c.context_dirty_since,
	c.context_dirty_resources,
	c.context_error
from (
	(
		chats c
			left join chats root
				on ((root.id = coalesce(c.root_chat_id, c.parent_chat_id)))
	)
		join visible_users owner on ((owner.id = c.owner_id))
);
